--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Fast Panopto",
   "version": "1.0",
   "description": "Allows user to choose a video speed beyond the defaults allowed by Panopto.",
-  "permissions": ["activeTab", "declarativeContent", "storage"],
+  "permissions": ["activeTab", "declarativeContent"],
   "background": {
     "scripts": ["background.js"],
 
