--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "faster-panopto",
+	"description": "upgraded version of fast-panopto to work with firefox and chrome",
 	"private": true,
 	"scripts": {
 		"build": "parcel build source/manifest.json --no-content-hash --no-source-maps --dist-dir distribution --no-cache --detailed-report 0",
