--- a/source/manifest.json
+++ b/source/manifest.json
@@ -5,7 +5,7 @@
 	"description": "Forked version of Fast panopto designed to work on both firefox and chrome",
 	"homepage_url": "https://github.com/chazzox/faster-panopto/",
 	"background": { "scripts": ["utils/background"] },
-	"permissions": ["activeTab", "tabs", "storage"],
+	"permissions": ["activeTab", "tabs", "storage", "webRequest", "<all_urls>"],
 	"browser_action": {
 		"default_popup": "popup.html",
 		"default_icon": {
