--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"private": true,
 	"scripts": {
 		"build": "parcel build source/manifest.json --no-content-hash --no-source-maps --dist-dir distribution --no-cache --detailed-report 0",
-		"watch": "parcel watch source/manifest.json --dist-dir distribution --no-cache --no-hmr",
+		"start": "parcel watch source/manifest.json --dist-dir distribution --no-cache --no-hmr",
 		"format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
 	},
 	"browserslist": [
@@ -15,7 +15,6 @@
 	"dependencies": {
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"styled-components": "^5.3.1",
 		"webextension-polyfill": "^0.8.0"
 	},
 	"devDependencies": {
