--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"last 1 Firefox version"
 	],
 	"dependencies": {
+		"copy-to-clipboard": "^3.3.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"webextension-polyfill": "^0.8.0"
